--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -49,6 +49,8 @@
           MYSQL_USER: "{{ nextcloud_sql_user }}"
           MYSQL_PASSWORD: "{{ nextcloud_sql_password }}"
           NEXTCLOUD_TRUSTED_DOMAINS: "{{ nextcloud_hostname }}.{{ ansible_nas_domain }}"
+          TRUSTED_PROXIES: "172.17.0.0/24"
+          APACHE_DISABLE_REWRITE_IP: "1"
         restart_policy: unless-stopped
         memory: "{{ nextcloud_memory }}"
         labels:
