Fix openvpn_transmission memory tuning

--- a/roles/transmission-with-openvpn/tasks/main.yml
+++ b/roles/transmission-with-openvpn/tasks/main.yml
@@ -50,6 +50,7 @@
           - NET_ADMIN
         restart_policy: unless-stopped
         memory: "{{ transmission_openvpn_memory }}"
+        memory_swap: "{{ transmission_openvpn_memory }}"
         labels:
           traefik.enable: "{{ transmission_with_openvpn_available_externally | string }}"
           traefik.http.routers.transmission_openvpn.rule: "Host(`{{ transmission_openvpn_hostname }}.{{ ansible_nas_domain }}`)"
@@ -57,6 +58,7 @@
           traefik.http.routers.transmission_openvpn.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.transmission_openvpn.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.transmission_openvpn.loadbalancer.server.port: "9091"
+
   when: transmission_with_openvpn_enabled is true
 
 - name: Stop Transmission with OpenVPM
