--- a/roles/immich/tasks/main.yml
+++ b/roles/immich/tasks/main.yml
@@ -237,6 +237,11 @@
           flame.name: "Immich"
           flame.url: "https://{{ immich_hostname }}.{{ ansible_nas_domain }}"
           flame.icon: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons@master/png/immich.png"
+          homepage.group: "Media"
+          homepage.name: "Immich"
+          homepage.icon: "si-immich"
+          homepage.href: "http://{{ immich_hostname }}.{{ ansible_nas_domain }}"
+          homepage.description: "Immich photo service"
         restart_policy: unless-stopped
         memory: "{{ immich_proxy_memory }}"
   when: immich_enabled is true
