--- a/roles/plex/tasks/main.yml
+++ b/roles/plex/tasks/main.yml
@@ -47,6 +47,11 @@
           flame.name: "Plex"
           flame.url: "https://{{ plex_hostname }}.{{ ansible_nas_domain }}"
           flame.icon: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons@master/png/plex.png"
+          homepage.group: "Media"
+          homepage.name: "Plex"
+          homepage.icon: "si-plex"
+          homepage.href: "http://{{ plex_hostname }}.{{ ansible_nas_domain }}"
+          homepage.description: "Plex Media server"
 
     - name: Start Plex Autoscan
       block:
