--- a/roles/immich/defaults/main.yml
+++ b/roles/immich/defaults/main.yml
@@ -24,19 +24,19 @@ immich_proxy_memory: 1g
 # docker
 immich_postgres_container_name: "immich_postgres"
 immich_redis_container_name: "immich_redis"
-immich_typesense_container_name: "typesense"
+immich_typesense_container_name: "immich_typesense"
 immich_server_container_name: "immich_server"
 immich_microservices_container_name: "immich_microservices"
-immich_machinelearning_container_name: "immich_machine_learning"
+immich_machinelearning_container_name: "immich-machine-learning"
 immich_web_container_name: "immich_web"
 immich_proxy_container_name: "immich_proxy"
 
 immich_postgres_image: "postgres"
-immich_postgres_tag: "14"
+immich_postgres_tag: "14-alpine"
 immich_redis_image: "redis"
-immich_redis_tag: "6.2"
+immich_redis_tag: "6.2-alpine"
 immich_typesense_image: "typesense/typesense"
-immich_typesense_tag: "0.24.0"
+immich_typesense_tag: "0.24.1"
 immich_server_image: "ghcr.io/immich-app/immich-server"
 immich_server_tag: "release"
 immich_microservices_image: "ghcr.io/immich-app/immich-server"
@@ -58,8 +58,6 @@ immich_db_port: "5432"
 
 # immich
 immich_jwt_secret: "verylongandsecrettext"
-immich_enable_mapbox: "false"
-immich_mapbox_key: ""
 immich_public_login_page_message: "Welcome to Immich!"
 
 immich_typesense_api_key: "1234567890"
