--- a/roles/homepage/tasks/main.yml
+++ b/roles/homepage/tasks/main.yml
@@ -8,6 +8,30 @@
       with_items:
         - "{{ homepage_config_directory }}"
 
+    - name: Copy docker config
+      ansible.builtin.copy:
+        src: docker.yaml
+        dest: "{{ homepage_config_directory }}"
+      register: homepage_docker_config
+
+    - name: Copy widgets config
+      ansible.builtin.copy:
+        src: widgets.yaml
+        dest: "{{ homepage_config_directory }}"
+      register: homepage_widgets_config
+
+    - name: Copy bookmarks config
+      ansible.builtin.copy:
+        src: bookmarks.yaml
+        dest: "{{ homepage_config_directory }}"
+      register: homepage_bookmarks_config
+
+    - name: Copy services config
+      ansible.builtin.copy:
+        src: services.yaml
+        dest: "{{ homepage_config_directory }}"
+      register: homepage_services_config
+
     - name: Homepage Docker Container
       community.docker.docker_container:
         name: "{{ homepage_container_name }}"
@@ -16,10 +40,13 @@
         volumes:
           - "{{ homepage_config_directory }}:/app/config"
           - "/var/run/docker.sock:/var/run/docker.sock:ro"
+          - "{{ docker_home }}:/mnt/docker:ro"
+          - "{{ samba_shares_root }}:/mnt/media:ro"
         ports:
           - "{{ homepage_port }}:3000" # webapp
         restart_policy: unless-stopped
         memory: "{{ homepage_memory }}"
+        restart: "{{ homepage_services_config.changed or homepage_docker_config.changed or homepage_bookmarks_config.changed or homepage_widgets_config.changed }}"
   when: homepage_enabled is true
 
 - name: Stop Homepage
