--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -38,6 +38,12 @@
           flame.name: "Netdata"
           flame.url: "http://jezyk:{{ netdata_port }}/"
           flame.icon: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons@master/png/netdata.png"
+          homepage.group: "Other"
+          homepage.name: "NetData"
+          homepage.icon: "si-plex"
+          homepage.href: "http://{{ plex_hostname }}.{{ ansible_nas_domain }}"
+          homepage.description: "Plex Media server"
+
   when: netdata_enabled is true
 
 - name: Stop Netdata
