Cleanup immich tasks

--- a/roles/immich/defaults/main.yml
+++ b/roles/immich/defaults/main.yml
@@ -31,6 +31,8 @@ immich_machinelearning_container_name: "immich-machine-learning"
 immich_web_container_name: "immich_web"
 immich_proxy_container_name: "immich_proxy"
 
+
+immich_tag: "release"
 immich_postgres_image: "postgres"
 immich_postgres_tag: "14-alpine"
 immich_redis_image: "redis"
@@ -38,15 +40,10 @@ immich_redis_tag: "6.2-alpine"
 immich_typesense_image: "typesense/typesense"
 immich_typesense_tag: "0.24.1"
 immich_server_image: "ghcr.io/immich-app/immich-server"
-immich_server_tag: "release"
 immich_microservices_image: "ghcr.io/immich-app/immich-server"
-immich_microservices_tag: "release"
 immich_machinelearning_image: "ghcr.io/immich-app/immich-machine-learning"
-immich_machinelearning_tag: "release"
 immich_web_image: "ghcr.io/immich-app/immich-web"
-immich_web_tag: "release"
 immich_proxy_image: "ghcr.io/immich-app/immich-proxy"
-immich_proxy_tag: "release"
 immich_user_id: "1000"
 immich_group_id: "1000"
 
