--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -19,7 +19,6 @@
         image: "{{ nextcloud_db_image_name }}:{{ nextcloud_db_image_version }}"
         networks:
           - name: "{{ nextcloud_network_name }}"
-        network_mode: "{{ nextcloud_network_name }}"
         pull: true
         volumes:
           - "{{ nextcloud_data_directory }}/mysql:/var/lib/mysql:rw"
@@ -37,7 +36,6 @@
         image: "{{ nextcloud_image_name }}:{{ nextcloud_image_version }}"
         networks:
           - name: "{{ nextcloud_network_name }}"
-        network_mode: "{{ nextcloud_network_name }}"
         pull: true
         volumes:
           - "{{ nextcloud_data_directory }}/nextcloud:/var/www/html:rw"
@@ -49,12 +47,16 @@
           MYSQL_USER: "{{ nextcloud_sql_user }}"
           MYSQL_PASSWORD: "{{ nextcloud_sql_password }}"
           NEXTCLOUD_TRUSTED_DOMAINS: "{{ nextcloud_hostname }}.{{ ansible_nas_domain }}"
+          OVERWRITEHOST: "{{ nextcloud_hostname }}.{{ ansible_nas_domain }}"
+          OVERWRITEPROTOCOL: "https"
           TRUSTED_PROXIES: "172.17.0.0/24"
-          APACHE_DISABLE_REWRITE_IP: "1"
         restart_policy: unless-stopped
         memory: "{{ nextcloud_memory }}"
         labels:
           traefik.enable: "{{ nextcloud_available_externally | string }}"
+          traefik.http.middlewares.nextcloud-security.headers.stsPreload: "true"
+          traefik.http.middlewares.nextcloud-security.headers.stsSeconds: "15552000"
+          traefik.http.routers.nextcloud.middlewares: "nextcloud-security"
           traefik.http.routers.nextcloud.rule: "Host(`{{ nextcloud_hostname }}.{{ ansible_nas_domain }}`)"
           traefik.http.routers.nextcloud.tls.certresolver: "letsencrypt"
           traefik.http.routers.nextcloud.tls.domains[0].main: "{{ ansible_nas_domain }}"
