--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -8,11 +8,18 @@
       with_items:
         - "{{ traefik_data_directory }}"
         - "{{ traefik_data_directory }}/letsencrypt"
+        - "{{ traefik_data_directory }}/config"
 
     - name: Template Traefik config.yml
       ansible.builtin.template:
         src: traefik.yml
         dest: "{{ traefik_data_directory }}/traefik.yml"
+      register: template_config
+
+    - name: Template Traefik middlewares.yml
+      ansible.builtin.template:
+        src: middlewares.yml
+        dest: "{{ traefik_data_directory }}/config/middlewares.yml"
       register: template_config
 
     - name: Traefik Docker Container
@@ -23,6 +30,7 @@
         network_mode: host
         volumes:
           - "{{ traefik_data_directory }}/traefik.yml:/etc/traefik/traefik.yml:ro"
+          - "{{ traefik_data_directory }}/config:/etc/traefik/config:ro"
           - "{{ traefik_data_directory }}/letsencrypt:/letsencrypt:rw"
           - "/var/run/docker.sock:/var/run/docker.sock:ro"
         env: "{{ traefik_environment_variables }}"
