Separate folder fpr web logs for crowdsec

--- a/roles/ansible-nas-docker/defaults/main.yml
+++ b/roles/ansible-nas-docker/defaults/main.yml
@@ -3,6 +3,7 @@ ansible_nas_user: david
 
 # Where you want to store application data - you'll likely want this backed up or on a ZFS zpool.
 docker_home: /mnt/Volume2/docker
+docker_logs: "{{ docker_home }}/logs"
 
 # Where you want Docker to store images
 # Keep this on a fast disk, ideally an SSD. It doesn't need to be backed up.
