--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -9,6 +9,7 @@
         - "{{ traefik_data_directory }}"
         - "{{ traefik_data_directory }}/letsencrypt"
         - "{{ traefik_data_directory }}/config"
+        - "{{ docker_logs }}/traefik"
 
     - name: Template Traefik config.yml
       ansible.builtin.template:
@@ -32,6 +33,7 @@
           - "{{ traefik_data_directory }}/traefik.yml:/etc/traefik/traefik.yml:ro"
           - "{{ traefik_data_directory }}/config:/etc/traefik/config:ro"
           - "{{ traefik_data_directory }}/letsencrypt:/letsencrypt:rw"
+          - "{{ docker_logs }}/traefik:/logs"
           - "/var/run/docker.sock:/var/run/docker.sock:ro"
         env: "{{ traefik_environment_variables }}"
         restart_policy: unless-stopped
