Add persistent logs to tandoor, nextcloud to be used by crowdsec

--- a/roles/nextcloud/defaults/main.yml
+++ b/roles/nextcloud/defaults/main.yml
@@ -4,7 +4,7 @@ nextcloud_available_externally: false
 
 # directories
 nextcloud_data_directory: "{{ docker_home }}/nextcloud"
-
+nextcloud_log_directory: "{{ docker_logs }}/nextcloud"
 # network
 nextcloud_port: "8080"
 nextcloud_hostname: "nextcloud"
