--- a/roles/youtubedlmaterial/tasks/main.yml
+++ b/roles/youtubedlmaterial/tasks/main.yml
@@ -30,6 +30,8 @@
         env:
           ALLOW_CONFIG_MUTATIONS: "true"
           TZ: "{{ ansible_nas_timezone }}"
+          UID: "{{ youtubedlmaterial_user_id }}"
+          GID: "{{ youtubedlmaterial_group_id }}"
         restart_policy: unless-stopped
         memory: "{{ youtubedlmaterial_memory }}"
         labels:
