Minor fixes for compatibility with latest Ubuntu

--- a/roles/ansible-nas-general/defaults/main.yml
+++ b/roles/ansible-nas-general/defaults/main.yml
@@ -14,6 +14,7 @@ ansible_nas_extra_packages:
   - unzip
   - lm-sensors
   - ctop
+  - cron
 
 # Sets the timezone for your Ansible NAS
 # You can find a list here https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
