--- a/roles/rclone/tasks/main.yml
+++ b/roles/rclone/tasks/main.yml
@@ -144,7 +144,7 @@
         masked: true
         state: stopped
       register: stop_service
-      until: stop_service.status.ActiveState == "inactive"
+      until: stop_service.status["ActiveState"] == "inactive"
       retries: 5
       delay: 5
 
